--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 mensagem.parametro.invalido=Par\u00E2metro Inv\u00E1lido
+recurso.nao_encotrado=Recurso n\u00E3o Encontrato
 
 categoria.nome=Nome
 
