Implementando consulta por filtros em Jogo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,7 @@
 mensagem.parametro.invalido=Par\u00E2metro Inv\u00E1lido
+
 recurso.nao_encotrado=Recurso n\u00E3o Encontrato
+recurso.operacao_nao_permitda=Opera\u00E7\u00E3o n\u00E3o Permitida
 
 categoria.nome=Nome
 
